<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/g_background"
    android:layout_height="match_parent"
    tools:context=".presentation.view.GreetingActivity">

    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/greeting_title"
            android:textStyle="bold"
            android:textColor="#241F1E"
            android:textSize="33sp"
            android:layout_width="290dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/greeting_description"
            android:textStyle="bold"
            android:textColor="#686767"
            android:textSize="18sp"
            android:layout_width="290dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="40dp"
            android:id="@+id/start"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/button_background"
            android:layout_width="150dp"
            android:layout_height="60dp"/>

    </LinearLayout>

</FrameLayout>