<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp"
        android:showDividers="none">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_scrollFlags="scroll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/search_background"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="10dp"
                    android:hint="@string/search"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:theme="@style/Theme.MyDiet"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/home_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/home_fitness_description" />

            <androidx.cardview.widget.CardView
                android:id="@+id/fitness"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="20dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/fitness">

                    <TextView
                        style="@style/home_category_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fitness" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/home_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/nutrition" />

            <androidx.cardview.widget.CardView
                android:id="@+id/diet"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="20dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/diet">

                    <TextView
                        style="@style/home_category_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diet" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/home_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/appearance" />

            <androidx.cardview.widget.CardView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/personal_care"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="20dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/personal_care">

                    <TextView
                        style="@style/home_category_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_care" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/beauty"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginVertical="20dp"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="20dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/beauty">

                    <TextView
                        style="@style/home_category_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/beauty" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>