<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.FitnessFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <FrameLayout
            android:id="@+id/exercise"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="130dp"
            tools:ignore="UselessParent">
            <FrameLayout
                android:background="@drawable/left_side_background"
                android:layout_gravity="bottom"
                android:layout_width="110dp"
                android:layout_height="110dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginStart="10dp"
                    android:src="@drawable/exercise"
                    android:layout_width="110dp"
                    android:layout_height="120dp"/>
                <TextView
                    android:layout_marginTop="20dp"
                    style="@style/home_description_text"
                    android:textSize="24sp"
                    android:text="@string/exercise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/yoga"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="130dp"
            tools:ignore="UselessParent">
            <FrameLayout
                android:background="@drawable/right_side_background"
                android:layout_gravity="bottom|end"
                android:layout_width="110dp"
                android:layout_height="110dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center|end"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="24dp"
                    style="@style/home_description_text"
                    android:textSize="24sp"
                    android:text="@string/Yga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginStart="30dp"
                    android:src="@drawable/yoga"
                    android:layout_gravity="end"
                    android:layout_width="110dp"
                    android:layout_height="120dp"/>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/cardio"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="130dp"
            tools:ignore="UselessParent">
            <FrameLayout
                android:background="@drawable/left_side_background"
                android:layout_gravity="bottom"
                android:layout_width="110dp"
                android:layout_height="110dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginStart="20dp"
                    android:src="@drawable/cardio"
                    android:layout_width="110dp"
                    android:layout_height="120dp"/>
                <TextView
                    android:layout_marginTop="24dp"
                    style="@style/home_description_text"
                    android:textSize="24sp"
                    android:text="@string/cardio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/favourite"
            android:layout_width="match_parent"
            android:layout_marginVertical="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="130dp"
            tools:ignore="UselessParent">
            <FrameLayout
                android:background="@drawable/right_side_background"
                android:layout_gravity="bottom|end"
                android:layout_width="110dp"
                android:layout_height="110dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center|end"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="24dp"
                    style="@style/home_description_text"
                    android:textSize="24sp"
                    android:text="@string/favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginStart="20dp"
                    android:src="@drawable/favourite"
                    android:layout_gravity="end"
                    android:layout_width="110dp"
                    android:layout_height="120dp"/>

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>